--- a/frontend/src/View/Page/Document/Markdown.css
+++ b/frontend/src/View/Page/Document/Markdown.css
@@ -3,13 +3,18 @@
 }
 
 .markdown h2 {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+}
+
+.markdown h2:first-child {
+    margin-top: 0;
 }
 
 .markdown h3 {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 }
 
 .markdown p {
-    font-size: 1rem;
+    font-size: 1.4rem;
 }
+
